Update To Version 1.0, Which Will Display Correctly on Mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -43,8 +43,8 @@ button[type=button] {
 }
 
 #board {
-  width: 60vh;
-  height: 60vh;
+  width: 96vmin;
+  height: 96vmin;
   margin: 0 auto;
 }
 
@@ -52,15 +52,16 @@ button[type=button] {
   width: 60%;
   height: 4vh;
   text-align: center;
-  font-size: 2.5vh;
+  font-size: 2.5vmin;
   margin: 0px auto;
-  padding-bottom: 1vh;
+  padding-bottom: 1vmin;
 }
 
 #clue {
-  position: absolute;
-  top: 60%;
-  left: 25%;
+  position: relative;
+  display: inline-block;
+  top: 0;
+  left: 0;
   height: 4vh;
   width: 50%;
 }
@@ -128,9 +129,9 @@ button[type=button] {
   width: 100%;
   height: 100%;
   text-align: center;
-  line-height: 5.0vh;
-  font-size: 3.2vh;
-  font-weight: 200;
+  line-height: 8.0vmin;
+  font-size: 4.5vmin;
+  font-weight: 300;
 }
 
 .label {
@@ -142,7 +143,7 @@ button[type=button] {
   border: 0px solid black;
   padding: 0;
   margin: 0;
-  font-size: 1.3vh;
+  font-size: 1.8vmin;
   color: black;
 }
 
@@ -185,7 +186,7 @@ button[type=button] {
   border-radius: 5px;
   text-align: center;
   text-decoration: none;
-  font: 15px;
+  font: 6
   font-weight: 700;
   padding-top: 13px;
 }
